--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@uiw/react-markdown-preview": "^5.0.7",
     "@uiw/react-md-editor": "^4.0.3",
     "class-variance-authority": "^0.7.0",
+    "date-fns": "^3.3.1",
     "formidable": "^3.5.1",
     "next": "14.1.0",
     "next-remove-imports": "^1.0.12",
