--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "genTypes": "supabase gen types typescript --project-id gyuewfxjtepmucihzmss > src/types/supabase.ts"
+    "genTypes": "supabase gen types typescript --project-id gyuewfxjtepmucihzmss > src/types/supabase.ts",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@supabase/ssr": "^0.1.0",
@@ -20,6 +21,7 @@
     "formidable": "^3.5.1",
     "next": "14.1.0",
     "next-remove-imports": "^1.0.12",
+    "node-fetch": "^2.6.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
@@ -33,8 +35,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "cypress": "^13.6.4",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-tailwindcss": "^3.14.1",
     "postcss": "^8",
     "prettier": "3.2.5",
