--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.18.1",
+    "@testing-library/cypress": "^10.0.1",
     "@uiw/react-markdown-preview": "^5.0.7",
     "@uiw/react-md-editor": "^4.0.3",
     "class-variance-authority": "^0.7.0",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.4.4",
     "formidable": "^3.5.1",
     "next": "14.1.0",
     "next-remove-imports": "^1.0.12",
