--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "genTypes": "supabase gen types typescript --project-id gyuewfxjtepmucihzmss > src/types/supabase.ts",
     "cypress:open": "cypress open"
   },
+  "resolutions": {
+    "strip-ansi": "6.0.0"
+  },
   "dependencies": {
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.3",
